tdf#122572: Avoid thin rectangular border around context toolbar on iOS

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -361,6 +361,11 @@ body {
 		background: url('images/lc_paste.svg') no-repeat center !important;
 }
 
+.loleaflet-ios-context-toolbar {
+	position: absolute;
+	float: none;
+}
+
 .loleaflet-ios-context-table {
 	color: white;
 	font-size: 15px;
